discussion/kv_engine/159371/159371_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

add colors

Change-Id: I13c43d770b438ee9823b6da8fdef5ab7b0273705

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-08-15 18:27:25.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-15 19:06:47.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11332/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/color.cc:14:6: error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
std::atomic_bool color_supported{
     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11332/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/color.cc:14:6:
error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11332/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32926/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/color.cc:14:6:
error: no type named "atomic_bool" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32926/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/963/ : FAILURE

Compile error at [2021-08-15T18:30:29.674Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/utilities/color.cc:14:6:
error: no type named "atomic_bool" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/963/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12048/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12048/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21044/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21044/ )

Timeout of a CTest test [2021-08-15T19:02:13.136Z] 404/404 Test #231: ep-engine_ep_unit_tests.KVStoreParam/KVStoreParamTest .......................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21044/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10033/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38619/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13498/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13129/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12931/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/973/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
